--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,14 @@
 <ul>
     <li><a href="users">User List</a></li>
     <li><a href="meals">Meal List</a></li>
+    <form method="post" action="users">
+        Login is:
+        <select size="3" name="userId">
+            <option value="1" selected>Simply User</option>
+            <option value="2">Admin</option>
+        </select>
+        <button type="submit">Выбрать</button>
+    </form>
 </ul>
 </body>
 </html>
